# Supply-Chain-Security-Scanner

./: .gitignore  LICENSE  Makefile  README.md  SUIVI_PROJET.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  version_matcher.py
backend/app/db/: database.py
backend/app/models/: schemas.py
backend/app/parsers/: __init__.py  base.py  maven_parser.py  node_parser.py  python_parser.py
backend/app/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
backend/app/scoring/: risk_scorer.py
backend/app/services/: scan_service.py  vulnerability_service.py
backend/data/: vulnerability_db.json
backend/tests/: conftest.py  test_api.py  test_parsers.py  test_reporters.py  test_scan_service.py  test_scoring.py  test_version_matcher.py
backend/tests/fixtures/: package.json  pom.xml  requirements.txt
cli/: pyproject.toml
cli/scs_scanner/: commands.py  main.py
cli/tests/: test_cli.py
docs/: api.md  architecture.md  cli.md  devsecops-integration.md  risk-scoring.md  sbom-format.md  security-model.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
sample-projects/java-vulnerable/: pom.xml
sample-projects/mixed-project/: package.json  requirements.txt
sample-projects/node-secure/: package.json
sample-projects/node-vulnerable/: package.json
sample-projects/python-secure/: requirements.txt
(+12 files in other folders)
